<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/loginTitle"
        android:textSize="35sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivCompanyLogo"
        android:layout_width="100dp"
        android:contentDescription=""
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/world_svgrepo_com" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:autofillHints="emailAddress"
        android:hint="@string/enterEmailForLogin"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="password"
        android:layout_marginTop="20dp"
        android:hint="@string/enterPasswordForLogin" />

    <TextView
        android:id="@+id/tvForgotPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:text="@string/forgotPasswordTextLink"

        android:textSize="15sp"

        android:textStyle="bold|italic" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/white"
        android:text="@string/loginButtonText"
        android:textSize="20sp"
        android:textStyle="italic|bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tvSignUpForAccountDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpForAccountText"
            android:layout_marginEnd="7dp"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tvSignUpLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:text="@string/signUpForAccountLink"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>